First rough pass.
- MIDI connection to keyboard
- High level key models
- Active key tracking
- JavaFX Canvas + close-but-no-cigar visuals
- Enable Java14 preview features